--- a/app/src/main/res/layout/activity_lab1_question2.xml
+++ b/app/src/main/res/layout/activity_lab1_question2.xml
@@ -21,6 +21,7 @@
             android:textSize="25sp" />
 
         <EditText
+            android:id="@+id/etUsername"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
@@ -41,6 +42,7 @@
             android:textSize="25sp" />
 
         <EditText
+            android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
@@ -49,10 +51,11 @@
     </LinearLayout>
 
     <Button
-        android:layout_marginTop="20dp"
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Login"/>
+        android:layout_marginTop="20dp"
+        android:text="Login" />
 
 </LinearLayout>
