--- a/app/src/main/res/layout/activity_lab1_question4.xml
+++ b/app/src/main/res/layout/activity_lab1_question4.xml
@@ -11,26 +11,26 @@
         android:id="@+id/imgProfile"
         android:layout_width="70dp"
         android:layout_height="90sp"
-        android:src="@drawable/person"/>
+        android:src="@drawable/person" />
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_toEndOf="@id/imgProfile"
         android:text="Ram Kumar Shrestha"
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_toEndOf="@id/imgProfile"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvPost"
-        android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Manager"
-        android:textSize="20sp"
+        android:layout_below="@id/tvName"
+        android:layout_margin="5dp"
         android:layout_toEndOf="@id/imgProfile"
-        android:layout_below="@id/tvName"/>
+        android:text="Manager"
+        android:textSize="20sp" />
 
 </RelativeLayout>
