--- a/app/src/main/res/layout/activity_lab2_question1.xml
+++ b/app/src/main/res/layout/activity_lab2_question1.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="20dp"
-    tools:context=".lab2.Lab2Question1">
+    tools:context=".lab2.Lab2Question1Activity">
 
     <TextView
         android:id="@+id/tvValue"
